install:
	rm -rf $(IJPATH)/scripts || echo "no problem"
	mkdir -p $(DESTDIR)$(IJPATH)/scripts
	cp AutoExpose.bsh $(DESTDIR)$(IJPATH)/scripts/
	cp Init.bsh $(DESTDIR)$(IJPATH)/scripts/
	cp camera_test.bsh $(DESTDIR)$(IJPATH)/scripts/
	cp config_test.bsh $(DESTDIR)$(IJPATH)/scripts/
	cp image_snap_example.bsh $(DESTDIR)$(IJPATH)/scripts/
	cp image_snap_example_2.bsh $(DESTDIR)$(IJPATH)/scripts/
	cp live_demo.bsh $(DESTDIR)$(IJPATH)/scripts/
	cp manualAcq.bsh $(DESTDIR)$(IJPATH)/scripts/
	cp mm_beanshell_startup.bsh $(DESTDIR)$(IJPATH)/scripts/
	cp mm_load_docs.bsh $(DESTDIR)$(IJPATH)/scripts/
	cp mm_inspector.bsh $(DESTDIR)$(IJPATH)/scripts/
	cp mm_test_all.bsh $(DESTDIR)$(IJPATH)/scripts/
	cp mm_test_camera.bsh $(DESTDIR)$(IJPATH)/scripts/
	cp mm_test_properties.bsh $(DESTDIR)$(IJPATH)/scripts/
	cp mm_test_shutter.bsh $(DESTDIR)$(IJPATH)/scripts/
	cp mm_test_xystage.bsh $(DESTDIR)$(IJPATH)/scripts/
	cp mm_test_zstage.bsh $(DESTDIR)$(IJPATH)/scripts/
	cp sdemo1.bsh $(DESTDIR)$(IJPATH)/scripts/
	cp sdemo2.bsh $(DESTDIR)$(IJPATH)/scripts/
	cp setZoom.bsh $(DESTDIR)$(IJPATH)/scripts/

