pkglibdir = $(DEVICEADAPTERPATH)
AM_CXXFLAGS = $(MMDEVAPI_CXXFLAGS) -fpermissive
pkglib_LTLIBRARIES = libmmgr_dal_AAAOTF.la
libmmgr_dal_AAAOTF_la_SOURCES = AAAOTF.cpp AAAOTF.h
libmmgr_dal_AAAOTF_la_LIBADD = $(MMDEVAPI_LIBADD)
libmmgr_dal_AAAOTF_la_LDFLAGS = $(MMDEVAPI_LDFLAGS)

EXTRA_DIST = AAAOTF.vcproj license.txt
