
AM_CXXFLAGS = $(MMDEVAPI_CXXFLAGS)
deviceadapter_LTLIBRARIES = libmmgr_dal_ASIFW1000.la
libmmgr_dal_ASIFW1000_la_SOURCES = ASIFW1000.cpp ASIFW1000.h ASIFW1000Hub.cpp ASIFW1000Hub.h
libmmgr_dal_ASIFW1000_la_LIBADD = $(MMDEVAPI_LIBADD)
libmmgr_dal_ASIFW1000_la_LDFLAGS = $(MMDEVAPI_LDFLAGS)

EXTRA_DIST = ASIFW1000.vcproj license.txt
