pkglibdir = $(DEVICEADAPTERPATH)
AM_CXXFLAGS = $(MMDEVAPI_CXXFLAGS) -fpermissive
pkglib_LTLIBRARIES = libmmgr_dal_ASIStage.la
libmmgr_dal_ASIStage_la_SOURCES = ASIStage.cpp ASIStage.h h
libmmgr_dal_ASIStage_la_LIBADD = $(MMDEVAPI_LIBADD)
libmmgr_dal_ASIStage_la_LDFLAGS = $(MMDEVAPI_LDFLAGS)

EXTRA_DIST = ASIStage.vcproj license.txt
